--- a/(retired)/advscheduler/content/index.htm
+++ b/(retired)/advscheduler/content/index.htm
@@ -38,6 +38,7 @@
 	<script src="js/matchbrackets.js"></script>
 	<script src="js/python.js"></script>
 	<script src="js/custom.js"></script>
+	<script src="js/xregexp-all.js"></script>
 	<script src="js/nodel.js"></script>
 </head>
 <body>
