--- a/(retired)/advscheduler/content/index.htm
+++ b/(retired)/advscheduler/content/index.htm
@@ -29,15 +29,27 @@
 	<link rel="apple-touch-icon" sizes="72x72" href="images/nodel-icon-72x72.png">
 	<link rel="apple-touch-icon" sizes="114x114" href="images/nodel-icon-114x114.png">
 	<script src="js/jquery-1.11.2.min.js"></script>
+	<script src="js/jquery.touchevents.js"></script>
 	<script src="js/json2.js"></script>
 	<script src="js/jquery.color.js"></script>
 	<script src="js/jsviews.min.js"></script>
 	<script src="js/moment.min.js"></script>
 	<script src="js/jqcron.js"></script>
 	<script src="js/codemirror.js"></script>
+	<script src="js/foldcode.js"></script>
+	<script src="js/indent-fold.js"></script>
+	<script src="js/foldgutter.js"></script>
 	<script src="js/matchbrackets.js"></script>
 	<script src="js/python.js"></script>
-	<script src="js/custom.js"></script>
+	<script src="js/javascript.js"></script>
+	<script src="js/xml.js"></script>
+	<script src="js/css.js"></script>
+	<script src="js/clike.js"></script>
+	<script src="js/groovy.js"></script>
+	<script src="js/sql.js"></script>
+	<script src="js/dialog.js"></script>
+	<script src="js/searchcursor.js"></script>
+	<script src="js/search.js"></script>
 	<script src="js/xregexp-all.js"></script>
 	<script src="js/nodel.js"></script>
 </head>
