Cosmetic change for vertical button groups with a badge Cosmetic change for pills with a badge

--- a/Frontend/content/index-sample.xml.htm
+++ b/Frontend/content/index-sample.xml.htm
@@ -129,7 +129,7 @@
         <div class="row "><div class="col-sm-12 ">
             <h4 class="sect" data-showevent="Show" data-showarg="On">Testing button groups</h4>
             <div role="group" class="btn-group sect" data-showevent="Show" data-showarg="On">
-<a href="#" data-action="PresetChromecast" type="button" class="btn btn-default">Chromecast</a><a href="#" data-action="PresetTV" type="button" class="btn btn-default">TV</a><a href="#" data-action="PresetButler" type="button" class="btn btn-default">Signage</a><a href="#" data-action="PresetSpare1" type="button" class="btn btn-default">HDMI 1<span data-status="Status2" class="label label-default status"></span></a><a href="#" data-action="PresetSpare2" type="button" class="btn btn-default">HDMI 2<span data-status="Status2" class="label label-default status"></span></a>
+<a href="#" data-action="PresetChromecast" type="button" class="btn btn-default">Chromecast</a><a href="#" data-action="PresetTV" type="button" class="btn btn-default">TV</a><a href="#" data-action="PresetButler" type="button" class="btn btn-default">Signage</a><a href="#" data-action="PresetSpare1" type="button" class="btn btn-default haschild">HDMI 1<span data-status="Status2" class="label label-default status"></span></a><a href="#" data-action="PresetSpare2" type="button" class="btn btn-default haschild">HDMI 2<span data-status="Status2" class="label label-default status"></span></a>
 </div>
           </div></div>
         <div class="row "><div class="col-sm-12 ">
