Fix for Title event removing logo

--- a/Frontend/content/index-sample.xml.htm
+++ b/Frontend/content/index-sample.xml.htm
@@ -17,7 +17,7 @@
       <div class="container-fluid">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#nodel-navbar" aria-expanded="false"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
-          <a class="navbar-brand" id="title" href="#"><img src="img/logo.png">Status Page</a>
+          <a class="navbar-brand" href="#"><img src="img/logo.png"><span id="title">Status Page</span></a>
         </div>
         <div class="collapse navbar-collapse" id="nodel-navbar" role="navigation">
           <ul class="nav navbar-nav">
